# protolang

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
cmake/: Doc.cmake  QtPackaging.cmake  QtResource.cmake  QtTest.cmake  StandardFlags.cmake
src/: ast.cpp  ast.h  ast_codegen.cpp  ast_vfunc_typechecker.cpp  builtin.cpp  builtin.h  cache.h  code_generator.cpp  code_generator.h  codegen.cpp  compiler.cpp  compiler.h  encoding.h  entity_system.cpp  entity_system.h  env.cpp  env.h  exceptions.h  guessing.cpp  guessing.h  ident.h  lexer.h  lexer.l  linker.cpp  linker.h  log.cpp  log.h  logger.cpp  logger.h  main.cpp  named_entity.cpp  named_entity.h  namedobject.h  overloadset.h  parser.cpp  parser.h  scope.cpp  scope.h  semantic_analyzer.cpp  semantic_analyzer.h  (+9 more)
src/encoding/: encoding.cpp
src/encoding/default/: encoding_default.cpp  encoding_default.h
src/encoding/win/: encoding_win.cpp  encoding_win.h
src/linker/: COFFLinker.cpp  COFFLinker.h  linker.cpp
src/linker/win/: COFFLinker.cpp  COFFLinker.h
src/sys/: run_command.h
src/sys/win/: run_command.cpp
test/: .dump.json  code.ptl  dump.json  playground.cpp  test.cpp  test1.ptl  test2.ptl  test3.ptl
